docs: add swagger docs for product and product category
